--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                         Create an account instantly to get started or contact us to design a custom package for your business.
                     </p>
                     <div class="cta-links">
-                        <a href="#solutions" class="cta-link">
+                        <a href="#solutions" class="cta-link cta-link-primary">
                             Start now
                             <span class="cta-link-arrow">→</span>
                         </a>
