--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="nav-wrapper">
                 <a href="/" class="logo">
                     <div class="nav_logo w-embed">
-                        <svg xmlns="http://www.w3.org/2000/svg" width=1284" height="48 " viewBox="0 0 120 48" fill="none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 120 48" fill="none">
                             <g clip-path="url(#clip0_384_1837)">
                                 <path d="M23.6036 19.3759L28.7114 22.495L36.355 17.8457L36.3792 29.7741L3.00483 10.627L0.300293 12.0967V35.7859L3.00483 37.292L18.2557 28.3043L13.2322 25.3518L5.56437 29.7501V18.0129L38.9387 37.292L41.6068 35.726V12.0369L38.9028 10.627L23.6036 19.3759Z" fill="#764CF0"/>
                                 <path d="M20.9597 0.251953L5.76904 8.91706L20.9597 17.666L36.0909 8.97742L20.9597 0.251953Z" fill="#764CF0"/>
