--- a/index.html
+++ b/index.html
@@ -119,19 +119,78 @@
                         NeoX empowers Vietnam's businesses to compete globally with seamless digital payment solutions, 
                         from collections and payouts to virtual cards and gateways, driving efficiency, security, and sustainable growth.
                     </p>
-                    <div class="hero-cta">
-                        <a href="#contact" class="btn btn-primary btn-large">Contact us</a>
+                    <form class="lead-form" action="#contact">
+                        <input class="lead-input" type="email" name="email" placeholder="Email address" required>
+                        <button class="lead-submit" type="submit">Start now →</button>
+                    </form>
                     </div>
-                    <div class="currency-badge">
-                        <span class="currency-from">$USD</span>
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M4 10H16M16 10L11 5M16 10L11 15" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                        <span class="currency-to">₫VND</span>
-                    </div>
-                </div>
-                <div class="hero-visual">
-                    <div class="hero-graphic">
+                    <div class="hero-visual">
+                        <div class="hero-showcase">
+                            <!-- Dashboard preview (reuse styling) -->
+                            <div class="dashboard-mockup hero-dashboard">
+                                <div class="dashboard-header">
+                                    <div class="dashboard-logo">NeoX Dashboard</div>
+                                    <div class="dashboard-search">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                            <circle cx="7" cy="7" r="5" stroke="currentColor" stroke-width="2" />
+                                            <path d="M11 11L14 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                                        </svg>
+                                        Search
+                                        </div>
+                                        </div>
+                                        <div class="dashboard-content">
+                                            <div class="stat-card">
+                                                <div class="stat-label">Today</div>
+                                                <div class="stat-title">Net volume</div>
+                                                <div class="stat-value">$3,528,198.72</div>
+                                                <div class="stat-chart">
+                                                    <svg viewBox="0 0 200 60" preserveAspectRatio="none">
+                                                        <path d="M0,40 L20,35 L40,38 L60,30 L80,25 L100,28 L120,20 L140,15 L160,18 L180,12 L200,10" fill="none"
+                                                            stroke="url(#chartGradient)" stroke-width="2" />
+                                                        <defs>
+                                                            <linearGradient id="chartGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                                                                <stop offset="0%" style="stop-color:#7C3AED;stop-opacity:1" />
+                                                                <stop offset="100%" style="stop-color:#A78BFA;stop-opacity:1" />
+                                                            </linearGradient>
+                                                        </defs>
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                            <div class="stat-card">
+                                                <div class="stat-label">USD Balance</div>
+                                                <div class="stat-value stat-value-large">$553,257.51</div>
+                                                <div class="stat-detail">Available to pay out</div>
+                                                <div class="stat-link">View →</div>
+                                            </div>
+                                        </div>
+                                        </div>
+                                        
+                                        <!-- Checkout card overlay -->
+                                        <div class="checkout-card" aria-label="Payment demo">
+                                            <div class="checkout-card__header">
+                                                <div class="checkout-card__title">Abstraction Magazine</div>
+                                                <div class="checkout-card__sub">$19 per month</div>
+                                            </div>
+                                            <button class="checkout-card__applepay" type="button" aria-label="Apple Pay">
+                                                <span class="apple-logo" aria-hidden="true"></span> Pay
+                                            </button>
+                                            <div class="checkout-card__divider"><span>Or pay with card</span></div>
+                                            <label class="checkout-field">
+                                                <span>Number</span>
+                                                <input type="text" placeholder="4242 4242 4242 4242" inputmode="numeric" />
+                                            </label>
+                                            <div class="checkout-row">
+                                                <label class="checkout-field">
+                                                    <span>MM / YY</span>
+                                                    <input type="text" placeholder="MM / YY" inputmode="numeric" />
+                                                </label>
+                                                <label class="checkout-field">
+                                                    <span>CVC</span>
+                                                    <input type="text" placeholder="CVC" inputmode="numeric" />
+                                                </label>
+                                            </div>
+                            <button class="checkout-card__pay" type="button">Pay</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -550,6 +609,43 @@
 
     <!-- Footer -->
     <footer class="footer">
+        <div class="footer-background" aria-hidden="true">
+            <svg class="footer-wave-gradient" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 800"
+                preserveAspectRatio="xMidYMid slice">
+                <defs>
+                    <linearGradient id="footerGradient1" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" style="stop-color:#7C3AED;stop-opacity:0.35" />
+                        <stop offset="100%" style="stop-color:#A78BFA;stop-opacity:0.20" />
+                    </linearGradient>
+                    <linearGradient id="footerGradient2" x1="100%" y1="0%" x2="0%" y2="100%">
+                        <stop offset="0%" style="stop-color:#A78BFA;stop-opacity:0.28" />
+                        <stop offset="100%" style="stop-color:#7C3AED;stop-opacity:0.12" />
+                    </linearGradient>
+                </defs>
+                <path class="wave wave-1" d="M0,160 Q360,120 720,160 T1440,160 L1440,800 L0,800 Z" fill="url(#footerGradient1)">
+                    <animate attributeName="d" dur="20s" repeatCount="indefinite" values="
+                                        M0,160 Q360,120 720,160 T1440,160 L1440,800 L0,800 Z;
+                                        M0,140 Q360,180 720,140 T1440,140 L1440,800 L0,800 Z;
+                                        M0,160 Q360,120 720,160 T1440,160 L1440,800 L0,800 Z
+                                    " />
+                </path>
+                <path class="wave wave-2" d="M0,240 Q360,200 720,240 T1440,240 L1440,800 L0,800 Z" fill="url(#footerGradient2)">
+                    <animate attributeName="d" dur="25s" repeatCount="indefinite" values="
+                                        M0,240 Q360,200 720,240 T1440,240 L1440,800 L0,800 Z;
+                                        M0,220 Q360,260 720,220 T1440,220 L1440,800 L0,800 Z;
+                                        M0,240 Q360,200 720,240 T1440,240 L1440,800 L0,800 Z
+                                    " />
+                </path>
+                <path class="wave wave-3" d="M0,320 Q360,280 720,320 T1440,320 L1440,800 L0,800 Z" fill="url(#footerGradient1)"
+                    opacity="0.4">
+                    <animate attributeName="d" dur="30s" repeatCount="indefinite" values="
+                                        M0,320 Q360,280 720,320 T1440,320 L1440,800 L0,800 Z;
+                                        M0,300 Q360,340 720,300 T1440,300 L1440,800 L0,800 Z;
+                                        M0,320 Q360,280 720,320 T1440,320 L1440,800 L0,800 Z
+                                    " />
+                </path>
+            </svg>
+        </div>
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
