feat: Add animated gradient canvas and overlay for enhanced visual effects

--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
             </div>
         </div>
         <div class="hero-background">
+            <canvas class="gradient-canvas" id="gradientCanvas"></canvas>
+            <div class="gradient-overlay"></div>
             <svg class="wave-gradient" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 800" preserveAspectRatio="xMidYMid slice">
                 <defs>
                     <linearGradient id="gradient1" x1="0%" y1="0%" x2="100%" y2="100%">
