feat: Add neox-3d logo SVG and update logo references in HTML

--- a/index.html
+++ b/index.html
@@ -16,53 +16,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <a href="/" class="logo">
-                    <div class="nav_logo w-embed">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 120 48" fill="none">
-                            <g clip-path="url(#clip0_384_1837)">
-                                <path d="M23.6036 19.3759L28.7114 22.495L36.355 17.8457L36.3792 29.7741L3.00483 10.627L0.300293 12.0967V35.7859L3.00483 37.292L18.2557 28.3043L13.2322 25.3518L5.56437 29.7501V18.0129L38.9387 37.292L41.6068 35.726V12.0369L38.9028 10.627L23.6036 19.3759Z" fill="#764CF0"/>
-                                <path d="M20.9597 0.251953L5.76904 8.91706L20.9597 17.666L36.0909 8.97742L20.9597 0.251953Z" fill="#764CF0"/>
-                                <path d="M5.76904 38.8448L20.9597 47.5938L36.0909 38.9046L20.9597 30.1797L5.76904 38.8448Z" fill="#764CF0"/>
-                                <path d="M48.2896 16.0293V31.7701H53.1084V20.0927H58.3967V31.7701H63.1683V19.1126L59.8746 16.0293H48.2896Z" fill="#764CF0"/>
-                                <path d="M93.958 16.0293H85.858L82.5415 19.1249V28.5436L85.858 31.8064H93.958L97.2751 28.5671V19.1489L93.958 16.0293ZM92.5279 27.6944H87.24V20.0927H92.5279V27.6944Z" fill="#764CF0"/>
-                                <path d="M68.5041 16.0289L65.2827 19.1245V28.5433C65.2827 28.5433 67.7228 30.7063 68.7441 31.7825H80.1857V27.7069H70.3068V25.1608H80.1857V19.0888L77.1929 15.9932L68.5041 16.0289ZM75.9791 22.6383H70.3186V20.0923H75.9791V22.6383Z" fill="#764CF0"/>
-                                <path d="M96.6866 13.71C95.9296 13.71 95.5208 14.5826 95.989 15.1563L111.793 33.9093C111.877 34.029 112.058 34.1123 112.202 34.1123H118.74C119.268 34.1123 119.617 33.6823 119.641 33.2396V33.2155C119.641 33.0361 119.581 32.8449 119.437 32.666L103.633 13.9129C103.549 13.7933 103.369 13.71 103.225 13.71H96.6866Z" fill="url(#paint0_linear_384_1837)"/>
-                                <mask id="mask0_384_1837" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="95" y="13" width="25" height="22">
-                                    <path d="M96.6859 13.709C95.9297 13.709 95.5209 14.5817 95.989 15.1553L111.793 33.9084C111.876 34.028 112.057 34.1113 112.201 34.1113H118.739C119.268 34.1113 119.616 33.6814 119.641 33.2386V33.2145C119.641 33.0351 119.581 32.8439 119.436 32.665L103.633 13.912C103.549 13.7923 103.368 13.709 103.225 13.709H96.6866H96.6859Z" fill="white"/>
-                                </mask>
-                                <g mask="url(#mask0_384_1837)">
-                                    <path d="M109.666 1.86426L129.736 25.673L105.483 45.8958L85.4131 22.1234L109.666 1.86426Z" fill="url(#paint1_linear_384_1837)"/>
-                                </g>
-                                <path d="M112.202 13.7095C112.058 13.7095 111.877 13.7693 111.793 13.9125L95.99 32.6655C95.4968 33.2397 95.9293 34.1353 96.6869 34.1353H103.225C103.369 34.1353 103.549 34.0755 103.634 33.9324L119.437 15.1794C119.581 14.9999 119.641 14.8327 119.641 14.6297V14.6057C119.641 14.1395 119.268 13.733 118.739 13.733C118.764 13.709 112.201 13.709 112.201 13.709L112.202 13.7095Z" fill="url(#paint2_linear_384_1837)"/>
-                                <mask id="mask1_384_1837" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="95" y="13" width="25" height="22">
-                                    <path d="M112.202 13.7096C112.058 13.7096 111.877 13.7693 111.793 13.9125L95.99 32.6656C95.4968 33.2397 95.9293 34.1354 96.6869 34.1354H103.225C103.369 34.1354 103.549 34.0755 103.634 33.9324L119.437 15.1794C119.581 14.9999 119.641 14.8327 119.641 14.6298V14.6057C119.641 14.1395 119.268 13.7331 118.739 13.7331C118.764 13.709 112.201 13.709 112.201 13.709L112.202 13.7096Z" fill="white"/>
-                                </mask>
-                                <g mask="url(#mask1_384_1837)">
-                                    <path d="M85.4131 25.674L105.483 1.86523L129.736 22.1244L109.666 45.8968L85.4131 25.674Z" fill="url(#paint3_linear_384_1837)"/>
-                                </g>
-                            </g>
-                            <defs>
-                                <linearGradient id="paint0_linear_384_1837" x1="95.9903" y1="23.5713" x2="119.889" y2="23.5713" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#FFAA00"/>
-                                    <stop offset="1" stop-color="#FFDF02"/>
-                                </linearGradient>
-                                <linearGradient id="paint1_linear_384_1837" x1="98.41" y1="12.8456" x2="117.772" y2="36.0482" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#FFAA00"/>
-                                    <stop offset="1" stop-color="#FFDF02"/>
-                                </linearGradient>
-                                <linearGradient id="paint2_linear_384_1837" x1="95.9801" y1="23.5828" x2="119.89" y2="23.5828" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#FFAA00"/>
-                                    <stop offset="1" stop-color="#FFDF02"/>
-                                </linearGradient>
-                                <linearGradient id="paint3_linear_384_1837" x1="98.2129" y1="34.7702" x2="117.575" y2="11.5677" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#FFAA00"/>
-                                    <stop offset="1" stop-color="#FFDF02"/>
-                                </linearGradient>
-                                <clipPath id="clip0_384_1837">
-                                    <rect width="120" height="48" fill="white"/>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </div>
+                    <img src="assets/neox-3d.svg" alt="NeoX Logo" width="120" height="48">
                 </a>
                 
                 <div class="nav-menu" id="navMenu">
@@ -652,7 +606,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <div class="footer-logo">
-                        <span class="logo-text">NeoX</span>
+                        <img src="assets/neox-3d.svg" alt="NeoX Logo" width="120" height="48">
                     </div>
                     <p class="footer-tagline">
                         NeoX - enter the world of seamless digital payments, online or offline, 
