style: Update neox-3d SVG gradients and enhance Open Graph/Twitter metadata in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="NeoX empowers Vietnam's businesses to compete globally with seamless digital payment solutions">
     <title>NeoX - Empowering Vietnam's Global Business Future</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="assets/neox-3d.svg">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://neox.vn/">
+    <meta property="og:title" content="NeoX - Empowering Vietnam's Global Business Future">
+    <meta property="og:description"
+        content="NeoX empowers Vietnam's businesses to compete globally with seamless digital payment solutions, from collections and payouts to virtual cards and gateways.">
+    <meta property="og:image" content="https://neox.vn/assets/neox-3d.svg">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://neox.vn/">
+    <meta property="twitter:title" content="NeoX - Empowering Vietnam's Global Business Future">
+    <meta property="twitter:description"
+        content="NeoX empowers Vietnam's businesses to compete globally with seamless digital payment solutions, from collections and payouts to virtual cards and gateways.">
+    <meta property="twitter:image" content="https://neox.vn/assets/neox-3d.svg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
