Add animated SVG icons for compliance and features
- Introduced new SVG icons for various compliance aspects including license, shield, verification, privacy, monitoring, and pricing.
- Added animated terminal icon for integration features.
- Updated the index.html to replace placeholder SVGs with the new icons.
- Modified CSS styles for improved visual effects on logo and icons.

--- a/index.html
+++ b/index.html
@@ -411,49 +411,35 @@
             <div class="compliance-grid">
                 <div class="compliance-item">
                     <div class="compliance-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <circle cx="20" cy="20" r="18" stroke="#4F46E5" stroke-width="2"/>
-                            <path d="M13 20L17 24L27 14" stroke="#4F46E5" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
+                        <img src="assets/license-icon.svg" alt="Licensed" width="48" height="48" />
                     </div>
                     <p class="compliance-text">Licensed and regulated by financial authorities</p>
                 </div>
 
                 <div class="compliance-item">
                     <div class="compliance-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <rect x="8" y="10" width="24" height="20" rx="2" stroke="#4F46E5" stroke-width="2"/>
-                            <path d="M15 10V8C15 6.89543 15.8954 6 17 6H23C24.1046 6 25 6.89543 25 8V10" stroke="#4F46E5" stroke-width="2"/>
-                        </svg>
+                        <img src="assets/shield-icon.svg" alt="PCI DSS" width="48" height="48" />
                     </div>
                     <p class="compliance-text">PCI DSS certified for secure payment processing</p>
                 </div>
 
                 <div class="compliance-item">
                     <div class="compliance-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <path d="M20 8L26 12V20C26 24 23 27 20 28C17 27 14 24 14 20V12L20 8Z" stroke="#4F46E5" stroke-width="2"/>
-                        </svg>
+                        <img src="assets/verify-icon.svg" alt="AML KYC" width="48" height="48" />
                     </div>
                     <p class="compliance-text">AML & KYC procedures to protect against fraud</p>
                 </div>
 
                 <div class="compliance-item">
                     <div class="compliance-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <rect x="10" y="14" width="20" height="16" rx="2" stroke="#4F46E5" stroke-width="2"/>
-                            <path d="M20 18V22M20 22H16M20 22H24" stroke="#4F46E5" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
+                        <img src="assets/privacy-icon.svg" alt="Privacy" width="48" height="48" />
                     </div>
                     <p class="compliance-text">Robust data privacy and protection standards</p>
                 </div>
 
                 <div class="compliance-item">
                     <div class="compliance-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <circle cx="20" cy="20" r="10" stroke="#4F46E5" stroke-width="2"/>
-                            <path d="M20 14V20L24 22" stroke="#4F46E5" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
+                        <img src="assets/monitoring-icon.svg" alt="Monitoring" width="48" height="48" />
                     </div>
                     <p class="compliance-text">Continuous monitoring and risk management</p>
                 </div>
@@ -534,16 +520,7 @@
 
                 <div class="cta-feature-block">
                     <div class="cta-feature-icon">
-                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" aria-hidden="true">
-                            <defs>
-                                <linearGradient id="ctaIconGradientPrice" x1="6" y1="6" x2="26" y2="26" gradientUnits="userSpaceOnUse">
-                                    <stop offset="0" stop-color="#60A5FA"/>
-                                    <stop offset="1" stop-color="#6366F1"/>
-                                </linearGradient>
-                            </defs>
-                            <path d="M15.707 6.29289C16.0975 5.90237 16.7307 5.90237 17.1212 6.29289L25.7071 14.8787C25.8946 15.0662 26 15.3212 26 15.5858V23.5C26 24.3284 25.3284 25 24.5 25H16.5858C16.3212 25 16.0662 24.8946 15.8787 24.7071L7.29289 16.1213C6.90237 15.7307 6.90237 15.0976 7.29289 14.7071L15.707 6.29289Z" fill="url(#ctaIconGradientPrice)"/>
-                            <circle cx="19" cy="12" r="1.75" fill="white"/>
-                        </svg>
+                        <img src="assets/pricing-icon.svg" alt="Pricing" width="48" height="48" />
                     </div>
                     <div class="cta-feature-content">
                         <h3 class="cta-feature-title">Always know what you pay</h3>
@@ -557,16 +534,7 @@
 
                 <div class="cta-feature-block">
                     <div class="cta-feature-icon">
-                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" aria-hidden="true">
-                            <defs>
-                                <linearGradient id="ctaIconGradientIntegration" x1="8" y1="8" x2="26" y2="26" gradientUnits="userSpaceOnUse">
-                                    <stop offset="0" stop-color="#34D399"/>
-                                    <stop offset="1" stop-color="#6366F1"/>
-                                </linearGradient>
-                            </defs>
-                            <rect x="8" y="10" width="16" height="12" rx="3" fill="url(#ctaIconGradientIntegration)"/>
-                            <path d="M12 16H20M20 16L18 14M20 16L18 18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                        <img src="assets/terminal-animated.svg" alt="Terminal" width="32" height="32" />
                     </div>
                     <div class="cta-feature-content">
                         <h3 class="cta-feature-title">Start your integration</h3>
