style: Revamp product cards with updated titles, descriptions, and icons for enhanced clarity and user engagement

--- a/index.html
+++ b/index.html
@@ -307,17 +307,86 @@
             </p>
 
             <div class="products-container">
+                <!-- Payment Gateway -->
+                <div class="product-card" id="gateway">
+                    <div class="product-icon">
+                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
+                            <rect width="48" height="48" rx="12" fill="#EF4444" opacity="0.1" />
+                            <circle cx="24" cy="24" r="8" stroke="#EF4444" stroke-width="3" />
+                            <path d="M24 16V32M16 24H32" stroke="#EF4444" stroke-width="3" stroke-linecap="round" />
+                        </svg>
+                    </div>
+                    <h3 class="product-title">Payment Gateway</h3>
+                    <p class="product-description">
+                        NeoX connects you to multiple payment methods, offers flexible solutions and smooth integration,
+                        and ensures fast, fraud-protected transactions.
+                    </p>
+                    <a href="#gateway" class="product-link">
+                        Learn More
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                            <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                        </svg>
+                    </a>
+                </div>
+
+                <!-- NeoX Control -->
+                <div class="product-card" id="control">
+                    <div class="product-icon">
+                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
+                            <rect width="48" height="48" rx="12" fill="#F59E0B" opacity="0.1" />
+                            <rect x="14" y="18" width="20" height="14" rx="2" stroke="#F59E0B" stroke-width="3" />
+                            <path d="M18 18V16C18 14.3431 19.3431 13 21 13H27C28.6569 13 30 14.3431 30 16V18" stroke="#F59E0B" stroke-width="3" />
+                            </svg>
+                            </div>
+                            <h3 class="product-title">NeoX Control</h3>
+                            <p class="product-description">
+                                NeoX offers innovative solutions like virtual cards to handle your global needs,
+                                leveraging tokenization for better security and control.
+                            </p>
+                            <a href="#control" class="product-link">
+                                Learn More
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                    <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                                </svg>
+                            </a>
+                            </div>
+                            
+                            <!-- NeoX Disbursement -->
+                            <div class="product-card" id="disbursement">
+                                <div class="product-icon">
+                                    <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
+                                        <rect width="48" height="48" rx="12" fill="#8B5CF6" opacity="0.1" />
+                                        <path d="M24 14L24 28M24 28L20 24M24 28L28 24" stroke="#8B5CF6" stroke-width="3" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                        <path d="M16 32H32" stroke="#8B5CF6" stroke-width="3" stroke-linecap="round" />
+                                        <circle cx="18" cy="20" r="2" fill="#8B5CF6" opacity="0.5" />
+                                        <circle cx="30" cy="20" r="2" fill="#8B5CF6" opacity="0.5" />
+                        </svg>
+                    </div>
+                    <h3 class="product-title">NeoX Disbursement</h3>
+                    <p class="product-description">
+                        Automate and streamline mass payments with NeoX Disbursement. Send payments to thousands of
+                        recipients instantly with real-time tracking and comprehensive reporting.
+                    </p>
+                    <a href="#disbursement" class="product-link">
+                        Learn More
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                            <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                        </svg>
+                    </a>
+                </div>
+
                 <!-- NeoX Collection -->
                 <div class="product-card" id="collection">
                     <div class="product-icon">
                         <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
-                            <rect width="48" height="48" rx="12" fill="#4F46E5" opacity="0.1"/>
-                            <path d="M24 14V34M14 24H34" stroke="#4F46E5" stroke-width="3" stroke-linecap="round"/>
+                            <rect width="48" height="48" rx="12" fill="#4F46E5" opacity="0.1" />
+                            <path d="M24 14V34M14 24H34" stroke="#4F46E5" stroke-width="3" stroke-linecap="round" />
                         </svg>
                     </div>
                     <h3 class="product-title">NeoX Collection</h3>
                     <p class="product-description">
-                        NeoX's Collection solution helps businesses get paid faster, track real time, 
+                        NeoX's Collection solution helps businesses get paid faster, track real time,
                         and offer customers more ways to pay.
                     </p>
                     <a href="#collection" class="product-link">
@@ -332,60 +401,16 @@
                 <div class="product-card" id="payout">
                     <div class="product-icon">
                         <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
-                            <rect width="48" height="48" rx="12" fill="#10B981" opacity="0.1"/>
-                            <path d="M16 24L22 30L32 18" stroke="#10B981" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                            <rect width="48" height="48" rx="12" fill="#10B981" opacity="0.1" />
+                            <path d="M16 24L22 30L32 18" stroke="#10B981" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </div>
                     <h3 class="product-title">NeoX Payout</h3>
                     <p class="product-description">
-                        Send money to partners, customers, and employees quickly and securely. 
+                        Send money to partners, customers, and employees quickly and securely.
                         With bulk payouts, multi-currency support, and automated processes.
                     </p>
                     <a href="#payout" class="product-link">
-                        Learn More
-                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                            <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                    </a>
-                </div>
-
-                <!-- NeoX Control -->
-                <div class="product-card" id="control">
-                    <div class="product-icon">
-                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
-                            <rect width="48" height="48" rx="12" fill="#F59E0B" opacity="0.1"/>
-                            <rect x="14" y="18" width="20" height="14" rx="2" stroke="#F59E0B" stroke-width="3"/>
-                            <path d="M18 18V16C18 14.3431 19.3431 13 21 13H27C28.6569 13 30 14.3431 30 16V18" stroke="#F59E0B" stroke-width="3"/>
-                        </svg>
-                    </div>
-                    <h3 class="product-title">NeoX Control</h3>
-                    <p class="product-description">
-                        NeoX offers innovative solutions like virtual cards to handle your global needs, 
-                        leveraging tokenization for better security and control.
-                    </p>
-                    <a href="#control" class="product-link">
-                        Learn More
-                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                            <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                    </a>
-                </div>
-
-                <!-- Payment Gateway -->
-                <div class="product-card" id="gateway">
-                    <div class="product-icon">
-                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
-                            <rect width="48" height="48" rx="12" fill="#EF4444" opacity="0.1"/>
-                            <circle cx="24" cy="24" r="8" stroke="#EF4444" stroke-width="3"/>
-                            <path d="M24 16V32M16 24H32" stroke="#EF4444" stroke-width="3" stroke-linecap="round"/>
-                        </svg>
-                    </div>
-                    <h3 class="product-title">Payment Gateway</h3>
-                    <p class="product-description">
-                        NeoX connects you to multiple payment methods, offers flexible solutions and smooth integration, 
-                        and ensures fast, fraud-protected transactions.
-                    </p>
-                    <a href="#gateway" class="product-link">
                         Learn More
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                             <path d="M3 8H13M13 8L9 4M13 8L9 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
