style: Revamp footer layout with enhanced structure and new links for improved accessibility and aesthetics

--- a/index.html
+++ b/index.html
@@ -666,8 +666,16 @@
             </div>
 
             <div class="footer-bottom">
-                <p class="copyright">© 2026 NeoX. All rights reserved.</p>
-                <a href="#terms" class="terms-link">Terms of Services</a>
+                <div class="footer-bottom-left">
+                    <p class="copyright">© 2026 NeoX. All rights reserved.</p>
+                    <span class="footer-divider">•</span>
+                    <p class="made-with">Made with <span class="heart">💜</span> in Vietnam</p>
+                    </div>
+                    <div class="footer-bottom-right">
+                        <a href="#privacy" class="footer-link">Privacy Policy</a>
+                        <a href="#terms" class="footer-link">Terms of Service</a>
+                        <a href="#cookies" class="footer-link">Cookie Policy</a>
+                    </div>
             </div>
         </div>
     </footer>
