--- a/index.html
+++ b/index.html
@@ -674,10 +674,22 @@
                     <div class="developer-card-icon">
                         <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
                             <rect width="48" height="48" rx="12" fill="#F3F4F6" />
-                            <circle cx="24" cy="24" r="8" stroke="#8B5CF6" stroke-width="2" />
-                            <path
-                                d="M24 16V14M24 34V32M32 24H34M14 24H16M29.66 18.34L31.07 16.93M16.93 31.07L18.34 29.66M29.66 29.66L31.07 31.07M16.93 16.93L18.34 18.34"
-                                stroke="#8B5CF6" stroke-width="2" stroke-linecap="round" />
+                            <!-- Robot head -->
+                            <rect x="15" y="18" width="18" height="16" rx="2" stroke="#8B5CF6" stroke-width="2" fill="none" />
+                            <!-- Antenna -->
+                            <line x1="24" y1="14" x2="24" y2="18" stroke="#8B5CF6" stroke-width="2" stroke-linecap="round" />
+                            <circle cx="24" cy="13" r="1.5" fill="#8B5CF6" />
+                            <!-- Eyes -->
+                            <circle cx="20" cy="24" r="2" fill="#8B5CF6" />
+                            <circle cx="28" cy="24" r="2" fill="#8B5CF6" />
+                            <!-- Mouth/Interface line -->
+                            <path d="M19 29 L29 29" stroke="#8B5CF6" stroke-width="2" stroke-linecap="round" />
+                            <path d="M21 29 L21 31M27 29 L27 31" stroke="#8B5CF6" stroke-width="1.5" stroke-linecap="round" />
+                            <!-- Neural network nodes -->
+                            <circle cx="17" cy="22" r="1" fill="#8B5CF6" opacity="0.4" />
+                            <circle cx="31" cy="22" r="1" fill="#8B5CF6" opacity="0.4" />
+                            <circle cx="17" cy="30" r="1" fill="#8B5CF6" opacity="0.4" />
+                            <circle cx="31" cy="30" r="1" fill="#8B5CF6" opacity="0.4" />
                         </svg>
                     </div>
                     <h3 class="developer-card-title">Build AI agents</h3>
